--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".DiaryActivity"
+            android:launchMode="singleTask"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -21,6 +22,7 @@
         </activity>
         <activity
             android:name=".CoffeeBookActivity"
+            android:launchMode="singleTask"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -58,6 +60,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleTask"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
